--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -408,8 +408,7 @@
 }
 
 #networkviz {
-  left: -1087px; // This is for show
-  top: -1201px; // should be set by current active entity
+  background: none;
   cursor:-moz-grab;
   cursor:-webkit-grab;
   // cursor: url(https://mail.google.com/mail/images/2/openhand.cur), default !important;
@@ -425,10 +424,6 @@
     cursor:-moz-grabbing;
     cursor:-webkit-grabbing;
     // cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), default !important;
-  }
-
-  svg {
-    position: relative!important;
   }
 }                                                                                                               
 svg {
