--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -26,7 +26,7 @@
 	</div>
 
 	{{! The Visualisation }}
-	<div style="display:none" id="networkviz-wrapper">
+	<div style="display:block" id="networkviz-wrapper">
 		<div id="networkviz"></div>
 	</div>
 	
