--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -402,9 +402,13 @@
 #networkviz-wrapper {
   position: fixed;
   width:100%;
-  height:100%;
-  top:0;
+  top:46px;
   left:0;
+  bottom:0px;
+}
+
+#networkviz-wrapper .leaflet-top {
+  top: 82px;
 }
 
 #networkviz {
