correct relative url

--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -14,11 +14,11 @@
 		</div>
 		
 		<div class="col-sm-6">
-			<img class="center-block" width="25" height="auto" src="assets/images/arrow-top.png" /><br/>
+			<img class="center-block" width="25" height="auto" src="/assets/images/arrow-top.png" /><br/>
 			<p class="lead text-center"> 
 				Suche jetzt direkt nach Akteuren des politischen Lobbyismus und erforsche die Verbindungen, oder lade dir die Erweiterung für [Chrome] runter!
 			</p>
-			<img class="center-block" width="40" height="auto" src="assets/images/arrow-bottom.png" />
+			<img class="center-block" width="40" height="auto" src="/assets/images/arrow-bottom.png" />
 
 			<button class="btn-ext center-block btn btn-lg btn-primary" data-toggle="modal" data-target="#Extensions">
 				Installier dir den Durchblick!
