--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -429,7 +429,18 @@
     cursor:-webkit-grabbing;
     // cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), default !important;
   }
-}                                                                                                               
+}
+
+.leaflet-label {
+  position: absolute;
+  color: #000;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  font-size: 16px;
+}
+
 svg {
   position: fixed!important;
   top: 0;
