--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -92,7 +92,7 @@
     float: left;
 
       img {
-        margin:10px 0px;
+        margin:25px 0px 0px 0px;
         max-width:150px;
       }
       // margin: -80px 0px 0px 40px;
