--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6606,14 +6606,13 @@ button.close {
   color: #000;
   font-weight: bold;
   text-align: center;
-  white-space: nowrap;
   vertical-align: baseline;
   font-size: 16px;
+  width: 200px;
+  line-height: 1.1em;
 }
-svg {
-  position: fixed!important;
-  top: 0;
-  left: 0;
+.leaflet-label.small {
+  font-size: 12px;
 }
 .viewport-visual {
   min-height: 250px;
