--- a/assets/views/vizinfo.mustache
+++ b/assets/views/vizinfo.mustache
@@ -1,25 +1,12 @@
 <div class="table-responsive result-list">
   <p>Ergebnisse für »<span class="result-name"></span>«. Klicken Sie auf einen Eintrag, um zu den Details zu gelangen.</p>
-  <table class="table table-striped table-hover table-condensed">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th><i class="fa fa-share-alt"></i></th>
-      </tr>
-    </thead>
+    <div class="results">
+    <ul class="list-group">
     
-    <tbody>
-    
-      {{#item}}
-      <tr>
-        <td><i class="fa fa-{{icon}}"></i> <a href="/entity/{{_id}}">{{name}}</a></td>
-        <td>{{connections}}</td>
-      </tr>
-      {{/item}}
+     
       
-    </tbody>
-  
-  </table>
+    </ul>
+  </div>
 </div>
      
 <div class="result-single">
