--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -308,10 +308,28 @@
 @media (min-width: @screen-md-min) {
   .overlay .container { margin-top:150px; }
 }
-                                
-                                
-                                      
-                                      
+           
+                                                                     
+                                                                     
+//        _     ___                                                     
+//       dM.     MM                                                     
+//      ,MMb     MM                                                     
+//      d'YM.    MM____     ____  __ ____      ___   ___  __  ___  __   
+//     ,P `Mb    MMMMMMb   6MMMMb\`M6MMMMb   6MMMMb  `MM 6MMb `MM 6MMb  
+//     d'  YM.   MM'  `Mb MM'    ` MM'  `Mb 8M'  `Mb  MMM9 `Mb MMM9 `Mb 
+//    ,P   `Mb   MM    MM YM.      MM    MM     ,oMM  MM'   MM MM'   MM 
+//    d'    YM.  MM    MM  YMMMMb  MM    MM ,6MM9'MM  MM    MM MM    MM 
+//   ,MMMMMMMMb  MM    MM      `Mb MM    MM MM'   MM  MM    MM MM    MM 
+//   d'      YM. MM.  ,M9 L    ,MM MM.  ,M9 MM.  ,MM  MM    MM MM    MM 
+// _dM_     _dMM_MYMMMM9  MYMMMM9  MMYMMM9  `YMMM9'Yb_MM_  _MM_MM_  _MM_
+//                                 MM                                   
+//                                 MM                                   
+//                                _MM_                                                       
+                              
+.abspann-page {
+  padding-top:70px;                                  
+}  
+      
 // `7MM"""YMM       db        .g8""8q.   
 //   MM    `7      ;MM:     .dP'    `YM. 
 //   MM   d       ,V^MM.    dM'      `MM 
