--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -24,7 +24,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a data-toggle="modal" data-target="#Extensions" href="#">Browser-Erweiterung</a></li>
 				<li><a href="/faq">FAQ & Hilfe</a></li>
-				<li><a href="#">Abspann</a></li>
+				<li><a href="/abspann">Abspann</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
