--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -5,13 +5,10 @@
 
 	<div class="container" id="main">
 		<div class="row">
-			<div class="col-sm-6">
-				<img class="img-responsive zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="500" height="auto">
-			</div>
-		
-			<div class="col-sm-6">
-				<a href="/">Zurück zur Startseite</a>
-			</div>
+	    <div class="col-sm-4 col-sm-offset-4 text-center">
+      <img class="img-responsive zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo-gfx.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo-gfx.png';this.onerror=null;" alt="ZDF" width="500" height="auto">
+      <a href="/">Zurück zur Startseite</a>
+<br/><br/></div>
 		</div>
 		
 		<div class="row">
