--- a/assets/views/vizinfo.mustache
+++ b/assets/views/vizinfo.mustache
@@ -1,4 +1,6 @@
 <div class="table-responsive result-list">
+  <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
   <p>Ergebnisse für »<span class="result-name"></span>«. Klicken Sie auf einen Eintrag, um zu den Details zu gelangen.</p>
     <div class="results">
     <ul class="list-group">
@@ -11,6 +13,7 @@
      
 <div class="result-single">
   <a id="backtolist" class="btn btn-default" href="/"><i class="fa fa-arrow-left" aria-hidden="true"></i> Zurück</a>
+  <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 
   <div class="content"></div>
 </div>
