--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -40,6 +40,10 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11354b', endColorstr='#6392a8',GradientType=0 ); /* IE6-9 */
 }
 
+.close {
+  margin-top:-10px;
+  margin-right:-5px;
+}
                                                                
 //              ,,                                                      
 // `7MM"""Yp, `7MM                         `7MM"""Yp,                   
