--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -2,27 +2,31 @@
 	
 	<div class="row">
 		<div class="col-sm-6">
-			<h1>Wer will was, und von wem?</h1>
-			<br/>
+			<br/><br/>
+
 			<div class="videoWrapper">
 				<iframe width="560" height="315" src="//www.youtube.com/embed/tA-E_38oWLI" frameborder="0" allowfullscreen></iframe>
 			</div>
-			<br/>
-			<p>
+						<h1>Wer will was, und von wem?</h1>
+			<p class="intro-copy">
 				Curabitur blandit tempus porttitor. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas sdiam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatvestibulum.
 			</p>
 		</div>
 		
 		<div class="col-sm-6">
-			<img class="center-block" width="25" height="auto" src="/assets/images/arrow-top.png" /><br/>
-			<p class="lead text-center"> 
-				Suche jetzt direkt nach Akteuren des politischen Lobbyismus und erforsche die Verbindungen, oder lade dir die Erweiterung für [Chrome] runter!
-			</p>
-			<img class="center-block" width="40" height="auto" src="/assets/images/arrow-bottom.png" />
+		<p class="text-center">
+		<br/>
+		<i class="fa fa-long-arrow-up fa-4x"></i><br/>
+		</p>
+			<h1 class="text-center"> 
+				Suche jetzt direkt nach Akteuren des politischen Lobbyismus und erforsche die Verbindungen, oder lade dir die Erweiterung für deinen Browser runter!
+			</h1><br/>
+					<p class="text-center">
 
+<i class="fa fa-long-arrow-down fa-4x"></i></p>
 			<button class="btn-ext center-block btn btn-lg btn-primary" data-toggle="modal" data-target="#Extensions">
 				Installier dir den Durchblick!
-			</button>
+			</button><br/>
 		</div>
 	</div>
 
