--- a/assets/views/vizinfo.mustache
+++ b/assets/views/vizinfo.mustache
@@ -1,7 +1,7 @@
 <div class="table-responsive result-list">
   <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 
-  <p>Ergebnisse für »<span class="result-name"></span>«. Klicken Sie auf einen Eintrag, um zu den Details zu gelangen.</p>
+  <p class="lead">Ergebnisse für »<span class="result-name"></span>«.</p>
     <div class="results">
     <ul class="list-group">
     
