--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -13,6 +13,18 @@
 @media (min-width: @screen-md-min) { }
 @media (min-width: @screen-lg-min) {  }
 
+
+.label {
+padding-top:0.4em;
+float:right;
+}
+.leaflet-control-attribution {
+  display:none;
+}
+
+.btn-lg { font-size:18px; padding:15px; }
+input.lobbysearch { font-size:18px; }
+
 .videoWrapper { // responsive videos, ration 16:9
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
@@ -41,8 +53,10 @@
 }
 
 .close {
-  margin-top:-10px;
-  margin-right:-5px;
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  color:#999
 }
                                                                
 //              ,,                                                      
@@ -151,8 +165,7 @@
 //                                ,V                                       
 //                             OOb"                
 
-// ########################################################################################################################
-
+// ########################################################################################################################                              
 
 .zdf-header-grey {
   width: 100%;
@@ -162,13 +175,15 @@
   top:0px;
   position: absolute;
   min-width: 0px;
-  z-index:1030;
+  z-index:1040;
   border:0px!important;
   margin-bottom:0px;
 .miz-logo {
   width:80px;
   height:auto;
   float:left;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 .navbar-toggle {
   border:0px;
@@ -177,7 +192,7 @@
   margin-left:0px!important;
   img.zdf-logo-lobbyradar {
     width:150px;
-    margin:5px 10px 0px 10px;
+    margin:12px 10px 0px 10px;
   }
 }
   .navbar-toggle {
@@ -297,7 +312,7 @@
                                              
 
 .overlay {
-  background:rgba(12,12,12,0.6);
+  background:rgba(12,12,12,0.8);
   width:100%;
   height:100%;
   position: fixed;
@@ -307,6 +322,10 @@
   z-index:999;
   color:white!important;
   .container { margin-top:120px; }
+}
+
+.intro-copy {
+  font-size:18px;
 }
 
 @media (min-width: @screen-md-min) {
@@ -483,7 +502,6 @@
   min-height:250px;
 
   margin-top:170px;
-
   border:1px solid red;
   span {
     font-size:70%;
@@ -550,13 +568,14 @@
   margin-bottom:10px;
 }
 
+
 @media (min-width: @screen-sm-min) {
-  .viewport-info { margin-top:170px; }
+  .viewport-info { margin-top:145px; }
 }
 
-@media (min-width: @screen-md-min) {
-  .result-list, .result-single { margin-right:40px; }
-}
+// @media (min-width: @screen-md-min) {
+//   .result-list, .result-single { margin-right:40px; }
+// }
 
 
 //                                               ,,                      
