--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -59,7 +59,7 @@
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
-@font-size-h1:            floor((@font-size-base * 2.3)); // ~36px
+@font-size-h1:            floor((@font-size-base * 2)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
 @font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
 @font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
@@ -73,7 +73,7 @@
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    inherit;
-@headings-font-weight:    500;
+@headings-font-weight:    800;
 @headings-line-height:    1.1;
 @headings-color:          inherit;
 
@@ -151,13 +151,21 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              @gray-lighter;
-@btn-default-bg:                 @zdf-blue;
+@btn-default-color:              @zdf-blue;
+@btn-default-bg:                 transparent;
 @btn-default-border:             @zdf-blue;
+
+@btn-default-color:              #999;
+@btn-default-bg:                 transparent;
+@btn-default-border:             #CCC;
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-info;
 @btn-primary-border:             darken(@btn-primary-bg, 5%);
+
+@btn-primary-color:              white;
+@btn-primary-bg:                 @zdf-blue;
+@btn-primary-border:             @zdf-blue;
 
 @btn-success-color:              #fff;
 @btn-success-bg:                 @brand-success;
