--- a/assets/views/nav-blue.mustache
+++ b/assets/views/nav-blue.mustache
@@ -14,7 +14,7 @@
 					<div class="input-group">
 						<input type="text" placeholder="Suchen Sie nach Politikern, Firmen und Journalisten" class="lobbysearch form-control">
 						<span class="input-group-btn">
-							<button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+							<button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
 						</span>
 					</div>
 				</form>
