format entity data from db

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6695,10 +6695,26 @@ input.lobbysearch {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.result-single .entity-source {
+.result-single .entity-source,
+.result-single .entity-link {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.result-single .entity-relations-list {
+  margin: 0 -20px;
+}
+.result-single .entity-relations-item {
+  padding: 10px 20px 10px 20px;
+}
+.result-single .entity-relations-item table {
+  margin: 10px 0px;
+}
+.result-single .meta {
+  text-align: right;
+  font-size: 80%;
+  color: #999;
+  margin-bottom: 0px;
 }
 .avatar {
   max-width: 100px;
@@ -6710,6 +6726,9 @@ input.lobbysearch {
   .viewport-info {
     margin-top: 145px;
   }
+}
+.viewport-info {
+  margin-bottom: 20px!important;
 }
 .radarbox {
   position: relative;
