always show scrollbar; more info on entities

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6286,6 +6286,15 @@ button.close {
     display: none !important;
   }
 }
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
 .label {
   padding-top: 0.4em;
   float: right;
