--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -13,6 +13,16 @@
 @media (min-width: @screen-md-min) { }
 @media (min-width: @screen-lg-min) {  }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
 
 .label {
 padding-top:0.4em;
