add sharing button + about page

--- a/assets/views/nav-grey.mustache
+++ b/assets/views/nav-grey.mustache
@@ -22,8 +22,10 @@
 				<li><a href="#">ZDFheute</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				<li><div class="site-share"></div></li>
 				<li><a data-toggle="modal" data-target="#Extensions" href="#">Browser-Erweiterung</a></li>
 				<li><a href="/faq">FAQ & Hilfe</a></li>
+				<li><a href="/about">Über das Projekt</a></li>
 				<li><a href="/abspann">Abspann</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
