--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -13,6 +13,8 @@
 	<!-- js -->
 	<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/assets/js/d3.min.js"></script>
+	<script type="text/javascript" src="/assets/js/share.min.js"></script>
+
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/assets/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/assets/js/lobbyradar.js"></script>
