added own styles for share buttons including FA Icons; blue nav for subpages; only include map js on pages where map is found

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -13,6 +13,10 @@
 @media (min-width: @screen-md-min) { }
 @media (min-width: @screen-lg-min) {  }
 
+
+* {  -webkit-font-smoothing: antialiased; }
+
+
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 7px;
