--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -1,15 +1,26 @@
 {{>header}}
 {{>nav-grey}}
+<div class="zdf-header-blue">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3 col-xs-12 hidden-xs">
+        <a class="logo-name" href="/">    
+          <img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
+        </a>
+      </div>
+      <div class="col-sm-2 hidden-xs">
+        <img class="miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
+      </div>
+      <div class="col-sm-6 col-sm-offset-1 col-xs-12">
 
+      </div>
+    </div>
+  </div>
+</div>
 <div class="faq-page">
 
 	<div class="container" id="main">
-		<div class="row">
-	    <div class="col-sm-4 col-sm-offset-4 text-center">
-      <img class="img-responsive zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo-gfx.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo-gfx.png';this.onerror=null;" alt="ZDF" width="500" height="auto">
-      <a href="/">Zurück zur Startseite</a>
-<br/><br/></div>
-		</div>
+
 		
 		<div class="row">
 			<div class="col-sm-6">
