--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -32,4 +32,6 @@
 	
 </div> {{! end .fullscreen }}
 
+<script type="text/javascript" src="/assets/js/leaflet.js"></script>
+<script type="text/javascript" src="/assets/js/networkviz.js"></script>
 {{>footer}}
