--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -14,17 +14,17 @@
 		</div>
 		
 		<div class="col-sm-6">
-		<p class="text-center">
+		<p class="text-center hidden-xs">
 		<br/>
 		<i class="fa fa-long-arrow-up fa-3x"></i><br/>
 		</p>
 			<h1 class="text-center"> 
 				Suche jetzt direkt nach Akteuren des politischen Lobbyismus und erforsche die Verbindungen, oder lade dir die Erweiterung für deinen Browser runter!
 			</h1><br/>
-					<p class="text-center">
+					<p class="text-center hidden-xs">
 
 <i class="fa fa-long-arrow-down fa-3x"></i></p>
-			<button class="btn-ext center-block btn btn-lg btn-info" data-toggle="modal" data-target="#Extensions">
+			<button class="hidden-xs btn-ext center-block btn btn-lg btn-info" data-toggle="modal" data-target="#Extensions">
 				Installier dir den Durchblick!
 			</button><br/>
 		</div>
