--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2831,7 +2831,7 @@ fieldset[disabled] .btn-default.active {
   background-color: #999999;
 }
 .btn-primary {
-  color: #ffffff;
+  color: white;
   background-color: #1b4c64;
   border-color: #1b4c64;
 }
@@ -2841,7 +2841,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  color: #ffffff;
+  color: white;
   background-color: #102d3c;
   border-color: #0e2734;
 }
@@ -2873,7 +2873,7 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-primary .badge {
   color: #1b4c64;
-  background-color: #ffffff;
+  background-color: white;
 }
 .btn-success {
   color: #ffffff;
@@ -5389,7 +5389,7 @@ a.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #ffffff;
+  background-color: white;
   color: #062b3e;
   border: 1px solid #ededed;
   border-radius: 1px;
@@ -6286,6 +6286,9 @@ button.close {
     display: none !important;
   }
 }
+* {
+  -webkit-font-smoothing: antialiased;
+}
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
@@ -6775,4 +6778,253 @@ input.lobbysearch {
 }
 .btn-ext {
   margin-top: 17px;
+}
+.share-button.sharer-0 {
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
+  height: 30px!important;
+  width: 100%;
+  margin: 7px auto 15px auto;
+}
+@media (min-width: 768px) {
+  .share-button.sharer-0 {
+    width: auto;
+    height: 20px!important;
+  }
+}
+.share-button.sharer-0 [class*=entypo-]:before {
+  font-family: FontAwesome!important;
+  content: "\f064" !important;
+}
+.share-button.sharer-0 label {
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  background: #666!important;
+  border-radius: 0px!important;
+  color: #FFF!important;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 0px 0px 20px 0px!important;
+  padding: 10px 10px;
+}
+.share-button.sharer-0 label:hover {
+  opacity: 1!important;
+}
+.share-button.sharer-0 label:hover span {
+  color: #333;
+}
+.share-button.sharer-0 label span {
+  -webkit-font-smoothing: antialiased;
+  font-family: inherit!important;
+  font-size: .9em;
+  font-weight: normal!important;
+  padding-left: 6px;
+  text-transform: none!important;
+}
+.share-button.sharer-0 .social {
+  -webkit-transition: all .4s ease;
+  transition: all .4s ease;
+  margin-left: -15px;
+  opacity: 0;
+}
+.share-button.sharer-0 .social.top {
+  -ms-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  margin-top: -80px;
+}
+.share-button.sharer-0 .social.bottom {
+  -ms-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  margin-top: 5px;
+}
+.share-button.sharer-0 .social.middle {
+  margin-top: -34px;
+}
+.share-button.sharer-0 .social.middle.right {
+  -ms-transform-origin: 5% 50%;
+  -webkit-transform-origin: 5% 50%;
+  transform-origin: 5% 50%;
+  margin-left: 105px;
+}
+.share-button.sharer-0 .social.middle.left {
+  -ms-transform-origin: 5% 50%;
+  -webkit-transform-origin: 5% 50%;
+  transform-origin: 5% 50%;
+}
+.share-button.sharer-0 .social.right {
+  margin-left: 14px;
+}
+.share-button.sharer-0 .social.load {
+  -webkit-transition: none!important;
+  transition: none!important;
+}
+.share-button.sharer-0 .social.networks-1 {
+  width: 60px;
+}
+.share-button.sharer-0 .social.networks-1.center,
+.share-button.sharer-0 .social.networks-1.left {
+  margin-left: 14px;
+}
+.share-button.sharer-0 .social.networks-1.middle.left {
+  margin-left: -70px;
+}
+.share-button.sharer-0 .social.networks-1 ul {
+  width: 60px;
+}
+.share-button.sharer-0 .social.networks-2 {
+  width: 120px;
+}
+.share-button.sharer-0 .social.networks-2.center {
+  margin-left: -13px;
+}
+.share-button.sharer-0 .social.networks-2.left {
+  margin-left: -44px;
+}
+.share-button.sharer-0 .social.networks-2.middle.left {
+  margin-left: -130px;
+}
+.share-button.sharer-0 .social.networks-2 ul {
+  width: 120px;
+}
+.share-button.sharer-0 .social.networks-3 {
+  width: 180px;
+}
+.share-button.sharer-0 .social.networks-3.center {
+  margin-left: -45px;
+}
+.share-button.sharer-0 .social.networks-3.left {
+  margin-left: -102px;
+}
+.share-button.sharer-0 .social.networks-3.middle.left {
+  margin-left: -190px;
+}
+.share-button.sharer-0 .social.networks-3 ul {
+  width: 180px;
+}
+.share-button.sharer-0 .social.networks-4 {
+  width: 240px;
+}
+.share-button.sharer-0 .social.networks-4.center {
+  margin-left: -75px;
+}
+.share-button.sharer-0 .social.networks-4.left {
+  margin-left: 162px;
+}
+.share-button.sharer-0 .social.networks-4.middle.left {
+  margin-left: -250px;
+}
+.share-button.sharer-0 .social.networks-4 ul {
+  width: 240px;
+}
+.share-button.sharer-0 .social.networks-5 {
+  width: 300px;
+}
+.share-button.sharer-0 .social.networks-5.center {
+  margin-left: -105px;
+}
+.share-button.sharer-0 .social.networks-5.left {
+  margin-left: -225px;
+}
+.share-button.sharer-0 .social.networks-5.middle.left {
+  margin-left: -320px;
+}
+.share-button.sharer-0 .social.networks-5 ul {
+  width: 300px;
+}
+.share-button.sharer-0 .social.active {
+  transition: all .4s ease;
+  -webkit-transition: all .4s ease;
+  opacity: 1;
+}
+.share-button.sharer-0 .social.active.top {
+  -ms-transform: scale(1) translateY(-10px);
+  -webkit-transform: scale(1) translateY(-10px);
+  transform: scale(1) translateY(-10px);
+}
+.share-button.sharer-0 .social.active.bottom {
+  -ms-transform: scale(1) translateY(15px);
+  -webkit-transform: scale(1) translateY(15px);
+  transform: scale(1) translateY(15px);
+}
+.share-button.sharer-0 .social.active.middle.right {
+  -ms-transform: scale(1) translateX(10px);
+  -webkit-transform: scale(1) translateX(10px);
+  transform: scale(1) translateX(10px);
+}
+.share-button.sharer-0 .social.active.middle.left {
+  -ms-transform: scale(1) translateX(-10px);
+  -webkit-transform: scale(1) translateX(-10px);
+  transform: scale(1) translateX(-10px);
+}
+.share-button.sharer-0 .social ul {
+  color: #fff;
+  height: 46px;
+  left: 0;
+  list-style: none;
+  margin: auto;
+  padding: 0;
+  position: relative;
+  right: 0;
+}
+.share-button.sharer-0 .social ul li {
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  cursor: pointer;
+  display: none;
+  float: left;
+  font-size: 20px;
+  height: 22px;
+  margin: 0;
+  padding: 12px 0;
+  position: relative;
+  text-align: center;
+  width: 60px;
+  z-index: 2;
+}
+.share-button.sharer-0 .social ul li:hover {
+  color: rgba(0, 0, 0, 0.5);
+}
+.share-button.sharer-0 .social li[class*=facebook] {
+  background: #3b5998;
+  display: block;
+}
+.share-button.sharer-0 .social li[class*=facebook]:before {
+  content: "\f230" !important;
+}
+.share-button.sharer-0 .social li[class*=twitter] {
+  background: #6cdfea;
+  display: block;
+}
+.share-button.sharer-0 .social li[class*=twitter]:before {
+  content: "\f081" !important;
+}
+.share-button.sharer-0 .social li[class*=gplus] {
+  background: #e34429;
+  display: block;
+}
+.share-button.sharer-0 .social li[class*=gplus]:before {
+  content: "\f0d5" !important;
+}
+.share-button.sharer-0 .social li[class*=pinterest] {
+  background: #c5282f;
+  display: block;
+}
+.share-button.sharer-0 .social li[class*=pinterest]:before {
+  content: "\f0d2" !important;
+}
+.share-button.sharer-0 .social li[class*=paper-plane] {
+  background: #42c5b0;
+  display: block;
+}
+.share-button.sharer-0 .social li[class*=paper-plane]:before {
+  content: "\f003" !important;
 }
