--- a/assets/views/abspann.mustache
+++ b/assets/views/abspann.mustache
@@ -1,6 +1,22 @@
 {{>header}}
 {{>nav-grey}}
+<div class="zdf-header-blue">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3 col-xs-12 hidden-xs">
+        <a class="logo-name" href="/">    
+          <img class="zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo.png';this.onerror=null;" alt="ZDF" width="240" height="auto">
+        </a>
+      </div>
+      <div class="col-sm-2 hidden-xs">
+        <img class="miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
+      </div>
+      <div class="col-sm-6 col-sm-offset-1 col-xs-12">
 
+      </div>
+    </div>
+  </div>
+</div>  
 <div class="abspann-page">
 
   <div class="container" id="main">
@@ -8,9 +24,6 @@
     
     <div class="row">
       <div class="col-sm-4 col-sm-offset-4 text-center">
-      <img class="img-responsive zdf-logo-lobbyradar" src="/assets/images/zdf-lobbyradar-logo-gfx.svg" onerror="this.src='/assets/images/zdf-lobbyradar-logo-gfx.png';this.onerror=null;" alt="ZDF" width="500" height="auto">
-      <a href="/">Zurück zur Startseite</a>
-<br/><br/>
         <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
