--- a/station/assets/css/index.css
+++ b/station/assets/css/index.css
@@ -26,7 +26,6 @@ body {
 	margin-top: -8px;
 }
 
-
 .label-list {
 	margin-top: 4px;
 }
@@ -137,6 +136,10 @@ body {
 
 .twitter-typeahead {
 	width: 100%;
+}
+
+.start h4 a {
+	color: #000;
 }
 
 /* typeahead */
