--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -35,7 +35,7 @@
 //** Background color for `<body>`.
 @body-bg:               @zdf-darkblue;
 //** Global text color on `<body>`.
-@text-color:            @gray-lighter;
+@text-color:            #333;
 
 //** Global textual link color.
 @link-color:            @brand-info;
@@ -155,9 +155,9 @@
 @btn-default-bg:                 transparent;
 @btn-default-border:             @zdf-blue;
 
-@btn-default-color:              #999;
+@btn-default-color:              #333;
 @btn-default-bg:                 transparent;
-@btn-default-border:             #CCC;
+@btn-default-border:             #333;
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-info;
