--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -12,12 +12,13 @@
         <img class="miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
       </div>
       <div class="col-sm-6 col-sm-offset-1 col-xs-12">
+        <h1 class="text-right">FAQ & Hilfe</h1>
 
       </div>
     </div>
   </div>
 </div>
-<div class="faq-page">
+<div class="faq-page static-page">
 
 	<div class="container" id="main">
 
