--- a/assets/views/about.mustache
+++ b/assets/views/about.mustache
@@ -12,26 +12,35 @@
         <img class="miz-logo" src="/assets/images/logo-miz.png" alt="MIZ" width="auto" height="60">
       </div>
       <div class="col-sm-6 col-sm-offset-1 col-xs-12">
-
+        <h1 class="text-right">Über das Projekt</h1>
       </div>
     </div>
   </div>
 </div>
 
-<div class="abspann-page">
+<div class="about-page static-page">
 
   <div class="container" id="main">
 
     
-    <div class="row">
-      <div class="col-sm-4 col-sm-offset-4 text-center">
-     
+        <div class="row">
+      <div class="col-sm-6">
+        
+        <h1>Donec ullamcorper nulla non metus auctor fringilla.</h1>
         <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
         <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
 
       </div>
-    </div>
+            <div class="col-sm-6">
+        
+        <h1>Donec ullamcorper nulla non metus auctor fringilla.</h1>
+        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
+        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
+        <p>Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor.</p>
+
+      </div>
+      </div>
 
   </div>
 
