--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -16,14 +16,15 @@
 		<div class="col-sm-6">
 		<p class="text-center hidden-xs">
 		<br/>
-		<i class="fa fa-long-arrow-up fa-3x"></i><br/>
+		<i class="fa fa-long-arrow-up" style="font-size: 2.8em;"></i><br/>
 		</p>
-			<h1 class="text-center"> 
-				Suche jetzt direkt nach Akteuren des politischen Lobbyismus und erforsche die Verbindungen, oder lade dir die Erweiterung für deinen Browser runter!
-			</h1><br/>
+			<h1> 
+				Suche jetzt direkt nach Akteuren des politischen Lobbyismus
+			</h1>
+			 <p>und erforsche die Verbindungen, oder lade dir die Erweiterung für deinen Browser runter!</p><br/>
 					<p class="text-center hidden-xs">
 
-<i class="fa fa-long-arrow-down fa-3x"></i></p>
+<i class="fa fa-long-arrow-down" style="font-size: 2.8em;"></i></p>
 			<button class="hidden-xs btn-ext center-block btn btn-lg btn-info" data-toggle="modal" data-target="#Extensions">
 				Installier dir den Durchblick!
 			</button><br/>
