--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -14,6 +14,8 @@
 @media (min-width: @screen-lg-min) {  }
 
 
+
+
 * {  -webkit-font-smoothing: antialiased; }
 
 
@@ -187,6 +189,26 @@ input.lobbysearch { font-size:18px; }
 //                             OOb"                
 
 // ########################################################################################################################                              
+
+.share-button.site-share.sharer-0 .social.networks-5 {
+
+  &.center {
+    margin-left:-135px!important;
+  }
+  ul {
+    width:360px!important;
+
+    .entypo-whatsapp { 
+      display:block!important;
+      background:#0E9814;
+
+      &:before {
+        content:"\f232"!important;font-family:"FontAwesome"!important;
+      }
+    }
+  }
+}
+
 
 .zdf-header-grey {
   width: 100%;
